Form embedded in #show

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -11,4 +11,4 @@
 <br>
 <hr>
 
-<%= link_to "Write a review", new_restaurant_review_path(@restaurant) %>
+<%= render "shared/form_review", restaurant: @restaurant, review: @review %>
