--- a/app/assets/stylesheets/layouts/_index.scss
+++ b/app/assets/stylesheets/layouts/_index.scss
@@ -7,9 +7,23 @@ h1 {
 h2 {
   color: black;
   opacity: 0.6;
+}
+
+a h2 {
+  color: black;
+  opacity: 0.6;
   &:hover {
     opacity: 1;
   }
+}
+
+h3 {
+  color: black;
+  opacity: 0.6;
+}
+
+p {
+  color: black;
 }
 
 a {
