--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -4,5 +4,6 @@
   <%= link_to restaurant_path(restaurant) do %>
     <h2><%= restaurant.name %></h2>
   <% end %>
+  <p><%= restaurant.category.capitalize %></p>
   <p><%= restaurant.address %> | <%= restaurant.phone_number %></p>
 <% end %>
