--- a/app/views/shared/_form_restaurant.html.erb
+++ b/app/views/shared/_form_restaurant.html.erb
@@ -1,7 +1,8 @@
-<h1 class="text-center">Add a restaurant to the Rolodex</h1>
+<h1 class="text-center">Add a restaurant</h1>
 <br>
 <%= simple_form_for @restaurant do |f| %>
   <%= f.input :name %>
+  <%= f.input :category %>
   <%= f.input :address %>
   <%= f.input :phone_number %>
   <%= f.submit %>
