--- a/app/views/shared/_form_review.html.erb
+++ b/app/views/shared/_form_review.html.erb
@@ -1,6 +1,6 @@
-<h1 class="text-center">Write a review</h1>
+<h3>Write a review</h3>
 <br>
-<%= simple_form_for [restaurant, review] do |f| %>
+<%= simple_form_for [@restaurant, @review] do |f| %>
   <%= f.input :content %>
   <%= f.input :rating %>
   <%= f.submit %>
